# SemanticSearch

./: README.md
src/: catalog.xml  descriptions.xml  generate_xml_files.py  main.py  pyproject.toml
